# access-directory

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  auth0service.py  config.env.py  db.py  db_helpers.py  docker-compose.yml  helpers.py  pyproject.toml  s3.py  sample.env
.github/workflows/: docker-publish.yml
migrations/: env.py
migrations/versions/: 19d49e00741c_move_image_ordering_to_relation_table.py  1c4bb12413ae_initial_migration.py  1eb3c5578ebd_allow_locations_to_be_outside.py  40f4b882f16c_add_concordances_table.py  4944530939b0_add_naming_version_to_images_table.py  56d6a9ebf681_determine_db_structure_for_report_.py  5ffc90638c96_optional_image_metadata.py  6d43d7fbd1b1_add_elevator_manufacturer.py  729e70fdd84f_add_unknown_values_to_enums.py  74168007438d_add_coordinate_information.py  83e22d3a9cd1_new_image_paradigm.py  ab732a1a27a6_building_short_name_to_acronym.py  b45c77d63c44_finalize_status_type_and_ticket_ref_.py  ba0540bf9a6f_add_specific_location_notes_to_door_.py  c42357af00c2_locations_should_not_be_outside.py  e24dc296631c_add_thumbnail_ref_to_access_point_table.py  e2ccb83d8717_add_door_count_to_elevators.py
templates/: about.html  access_point.html  admin.html  catalog.html  edit.html  fmsreport.html  header.html  home.html  map.html  paginated.html
templates/includes/: muralcard.html
