[project]
name = "accessdirectory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.1",
    "attrs==23.1.0",
    "beautifulsoup4>=4.14.2",
    "blinker==1.6.3",
    "boto3>=1.40.43",
    "brother-ql==0.9.4",
    "bytecode==0.15.1",
    "cattrs==23.2.3",
    "click==8.1.7",
    "ddsketch==3.0.1",
    "deprecated==1.2.14",
    "envier==0.5.2",
    "flask==3.0.0",
    "flask-cors>=6.0.1",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "future==0.18.3",
    "greenlet==3.0.3",
    "gunicorn>=23.0.0",
    "importlib-metadata==7.1.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "json-log-formatter==1.0",
    "mako==1.3.3",
    "markupsafe==2.1.3",
    "opentelemetry-api==1.25.0",
    "packbits==0.6",
    "pandas>=2.3.3",
    "pillow==10.1.0",
    "protobuf==5.27.2",
    "psycopg2-binary==2.9.9",
    "pypng==0.20220715.0",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "pyusb==1.2.1",
    "qrcode==7.4.2",
    "relative-datetime>=0.1.4",
    "six==1.16.0",
    "sqlalchemy==2.0.29",
    "typing-extensions==4.11.0",
    "werkzeug==3.0.1",
    "wrapt==1.16.0",
    "xmltodict==0.13.0",
    "zipp==3.19.2",
]
