[project]
name = "accessdirectory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.17.2",
    "authlib>=1.6.4",
    "beautifulsoup4>=4.14.2",
    "boto3>=1.40.43",
    "flask==3.0.0",
    "flask-cors>=6.0.1",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "gunicorn>=23.0.0",
    "json-log-formatter==1.0",
    "pandas>=2.3.3",
    "pillow==10.1.0",
    "psycopg2-binary==2.9.9",
    "pypng==0.20220715.0",
    "python-dotenv>=1.1.1",
    "python-magic>=0.4.27",
    "relative-datetime>=0.1.4",
    "requests>=2.32.5",
    "six==1.16.0",
    "sqlalchemy==2.0.29",
    "typing-extensions>=4.15.0 ; python_full_version < '3.13'",
    "werkzeug==3.0.1",
]
